--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "dependencies": {
     "gatsby": "^2.26.1",
     "gatsby-plugin-sass": "^2.7.0",
+    "gatsby-plugin-sharp": "^2.10.1",
+    "gatsby-remark-images": "^3.7.1",
+    "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-source-contentful": "^4.2.1",
     "gatsby-source-filesystem": "^2.7.0",
     "gatsby-transformer-remark": "^2.12.0",
     "node-sass": "^4.14.1",
